<resources>
    <string name="app_name">Doors Open Ottawa</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_add_image">Add Image</string>
    <string name="action_change_image">Change Image</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete Building</string>
    <string name="action_discard">Discard Changes</string>
    <string name="action_sort">Sort by</string>
    <string name="action_filter">Filters</string>
    <string name="action_sort_a_z">Sort by Name (a-z)</string>
    <string name="action_sort_z_a">Sort by Name (z-a)</string>
    <string name="action_filter_religious">Religious Buildings</string>
    <string name="action_filter_embassies">Embassies Buildings</string>
    <string name="action_filter_government">Government Buildings</string>
    <string name="action_filter_functional">Functional Buildings</string>
    <string name="action_filter_galleries">Galleries and Theatres</string>
    <string name="action_filter_academic">Academic Institutions</string>
    <string name="action_filter_sports">Sports and Leisure</string>
    <string name="action_filter_community">Community and/or Care Centres</string>
    <string name="action_filter_business">Business and/or Foundations</string>
    <string name="action_filter_museums">Museums, Archives and Historic Sites</string>
    <string name="action_filter_other">Other</string>
    <string name="action_filter_none">None</string>
    <string name="action_filter_favorites">Favorites</string>
    <string name="action_filter_my_buildings">My Buildings</string>

    <string name="label_open_hours">Open Hours</string>
    <string name="label_building_details">Building Details</string>
    <string name="label_building_name">Name</string>
    <string name="label_building_address">Address</string>
    <string name="label_description">Description</string>
    <string name="label_saturday">Saturday (Jun 3)</string>
    <string name="label_sunday">Sunday (Jun 4)</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="label_open_time">Open Time</string>
    <string name="label_close_time">Close Time</string>
    <string name="label_new">Is New</string>

    <string name="hint_building_name">Building Name</string>
    <string name="hint_building_address">Building Address</string>
    <string name="hint_description">Describe this building here</string>

    <string name="error_building_name">Please fill Building Name</string>
    <string name="error_building_address">Please fill Building Address</string>
    <string name="error_no_network">Network not available</string>
    <string name="error_no_data">No Data</string>

    <string name="author" translatable="false">Priscila Ribas da Costa (riba0007)</string>

    <string name="message_confirm_discard">Would you like to discard all changes and return?</string>
    <string name="message_deleted">Building %d deleted</string>
    <string name="message_saved">Building %d saved</string>
    <string name="message_added">New building Added</string>

    <string name="text_open_hours">Sat %1$s\nSun %2$s</string>
    <string name="text_open_hour_time">%1$s from %2$s to %3$s</string>
    <string name="text_closed">Closed</string>
</resources>
