<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ca.edumedia.riba0007.doorsopenottawa.EditBuildingActivity">

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_discard"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/action_discard"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="always" />
</menu>
