<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/building_add_image"
            android:layout_width="0dp"
            android:layout_height="216dp"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/noimage"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/building_add_btn_change_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            app:elevation="8dp"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_menu_camera"
            android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/page_margin"
        android:text="@string/label_building_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorAccent"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/page_margin"
        android:text="@string/label_building_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/building_add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/page_margin"
        android:layout_marginEnd="@dimen/page_margin"
        android:ems="10"
        android:inputType="text"
        android:imeOptions="actionNext"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/page_margin"
        android:layout_marginTop="@dimen/page_margin"
        android:text="@string/label_building_address"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/building_add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/page_margin"
        android:layout_marginEnd="@dimen/page_margin"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:imeOptions="actionNext"/>
</LinearLayout>
