<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.edumedia.riba0007.doorsopenottawa.EditBuildingActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/building_edit_image"
                    android:layout_width="0dp"
                    android:layout_height="216dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/white"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/noimage"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/building_edit_btn_change_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:clickable="true"
                    app:elevation="8dp"
                    app:fabSize="mini"
                    app:srcCompat="@android:drawable/ic_menu_camera"
                    android:layout_marginRight="24dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="24dp"
                    android:layout_marginEnd="24dp" />

            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/building_edit_name"
                    android:layout_margin="@dimen/page_margin"
                    android:text="@string/label_building_details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:layout_weight="1"/>

                <CheckBox
                    android:id="@+id/building_edit_is_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/page_margin"
                    android:layout_weight="3"
                    android:checked="true"
                    android:text="@string/label_new"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_margin"
                android:layout_marginTop="@dimen/page_margin"
                android:text="@string/label_building_address"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/building_edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_margin"
                android:layout_marginEnd="@dimen/page_margin"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:imeOptions="actionNext"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_margin"
                android:layout_marginTop="@dimen/page_margin"
                android:text="@string/label_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/building_edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_margin"
                android:layout_marginEnd="@dimen/page_margin"
                android:ems="10"
                android:inputType="textMultiLine"
                android:imeOptions="actionNext"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_open_hours"
                android:layout_margin="@dimen/page_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorAccent"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_margin"
                android:layout_marginTop="@dimen/page_margin"
                android:text="@string/label_saturday"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="14sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/page_margin"
                        android:layout_marginTop="@dimen/page_margin"
                        android:text="@string/label_from"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textSize="14sp"
                        android:imeOptions="actionNext"/>

                    <EditText
                        android:id="@+id/building_edit_saturday_open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/page_margin"
                        android:layout_marginEnd="@dimen/page_margin"
                        android:clickable="true"
                        android:ems="10"
                        android:focusable="false"
                        android:imeOptions="actionNext"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/page_margin"
                        android:layout_marginTop="@dimen/page_margin"
                        android:text="@string/label_to"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/building_edit_saturday_close"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/page_margin"
                        android:layout_marginEnd="@dimen/page_margin"
                        android:clickable="true"
                        android:ems="10"
                        android:focusable="false"
                        android:imeOptions="actionNext"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/page_margin"
                android:layout_marginTop="@dimen/page_margin"
                android:text="@string/label_sunday"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textSize="14sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/page_margin"
                        android:layout_marginTop="@dimen/page_margin"
                        android:text="@string/label_from"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/building_edit_sunday_open"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/page_margin"
                        android:layout_marginEnd="@dimen/page_margin"
                        android:clickable="true"
                        android:ems="10"
                        android:focusable="false"
                        android:imeOptions="actionNext"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/page_margin"
                        android:layout_marginTop="@dimen/page_margin"
                        android:text="@string/label_to"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/building_edit_sunday_close"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/page_margin"
                        android:layout_marginEnd="@dimen/page_margin"
                        android:clickable="true"
                        android:ems="10"
                        android:focusable="false"
                        android:imeOptions="actionDone"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>
